<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gui_imie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="@string/gui_imie"
        android:textColor="#000000"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gui_enterName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/gui_enterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="@string/text_imie"
        android:ems="10"
        android:hint="@string/text_imie"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHint="#959595"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/gui_imie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gui_nazwisko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="@string/gui_nazwisko"
        android:textColor="#000000"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gui_enterName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/gui_enterSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="@string/text_nazwisko"
        android:ems="10"
        android:hint="@string/text_nazwisko"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#959595"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/gui_nazwisko"
        app:layout_constraintTop_toBottomOf="@+id/gui_enterName" />

    <TextView
        android:id="@+id/gui_liczbaOcen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/gui_liczbaOcen"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gui_enterSurname" />

    <EditText
        android:id="@+id/gui_enterGradeCount"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="@string/text_liczbaOcen"
        android:ems="10"
        android:hint="@string/text_liczbaOcen"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#959595"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/gui_liczbaOcen"
        app:layout_constraintTop_toBottomOf="@+id/gui_enterSurname" />

    <TextView
        android:id="@+id/textViewSrednia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#717171"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gui_enterGradeCount" />

    <Button
        android:id="@+id/button_oceny"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9900"
        android:text="@string/button_oceny"
        android:textColor="#111111"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSrednia" />

    <Button
        android:id="@+id/button_exit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9900"
        android:onClick="exitOnClick"
        android:text="@string/button_oceny"
        android:textColor="#111111"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSrednia" />

</androidx.constraintlayout.widget.ConstraintLayout>